# oneapi

./: Cargo.toml  README.md  models.json
src/: config.rs  gemini_oauth.rs  health.rs  lib.rs  main.rs  paths.rs  quota.rs  registry.rs  router.rs  types.rs
src/cli/: mod.rs
src/providers/: cli.rs  gemini.rs  gemini_code_assist.rs  mod.rs  openai.rs
tests/: account_tag_uniqueness.rs  hot_reload_test.rs  integration_tests.rs  quota_migration.rs
