[package]
name = "oneapi"
version = "0.1.0"
edition = "2024"

[lib]
name = "oneapi"
path = "src/lib.rs"

[[bin]]
name = "oneapi"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros"] }
tokio-stream = "0.1"
bytes = "1.11"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
libc = "0.2"
tiktoken-rs = "0.9"
rand = "0.10"
daemonize = "0.5"
home = "0.5"
hex = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
strip-ansi-escapes = "0.2"
tracing-appender = "0.2"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3.10"
